--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </header>
 
 <div class="item">
-    <img src="blusa_cinza.jpg" alt="Blusa Cinza Tam M">
+    <img src="blusa_cinza.jpg" alt="Blusa Cinza">
     <div class="info">
         <h2>Blusa Cinza - Tam M (34/36)</h2>
         <p>Preço: R$ 5,00</p>
@@ -67,7 +67,7 @@
 </div>
 
 <div class="item">
-    <img src="blusa_vermelha.jpg" alt="Blusa Vermelha G Importada">
+   <img src="blusa_vermelha.jpg" alt="Blusa Vermelha">
     <div class="info">
         <h2>Blusa Vermelha - Tam G</h2>
         <p>Importada da Irlanda (Nova)<br>Preço: R$ 80,00</p>
